[package]
name = "trsfer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
num_cpus = "1.13"

indicatif = "0.16"

log = "0.4.0"
env_logger = "0.8.4"

[profile.release]
debug = true
